--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,75 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    background-color: #282c34;
+    min-height: 8vh;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    text-align: center;
+
 }
+
+
+.body {
+    background-color: #2e323b;
+    height: 100%;
+    height: 92vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .Box-Container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: DodgerBlue;
-  width: 620px;
+    background-color: DodgerBlue;
+    height: 65vh;
+    width: 55vh;
+    position: absolute;
+    top: 15%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.Row{
+    width: 90%;
+    height: 16%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+
+}
+.Box-Container>.Row>.Box {
+    background-color: #464343;
+    display: inline-block;
+    width:  10vh;
+    height: 8vh;
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: center;
+
 }
 
-.Box-Container>.Box {
-  background-color: #464343;
-  width: 16%;
-  height: 100px;
-  margin: 12px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
-
+p {
+    margin-top: 30%;
 }
 
-.Keyboard
-{
-  position: absolute;
-  bottom: 0px;
+.Keyboard {
+    position: absolute;
+    bottom: 0px;
 }
 
 .Keyboard>button {
-  
-  background-color: rgb(104, 230, 104);
-  padding: 15px 32px;
-  margin: 5px;
+
+    background-color: rgb(104, 230, 104);
+    padding: 15px 32px;
+    margin: 5px;
 }
 
-.Pointer
-{
-  position: absolute;
-  left: 22%;
-
+.Pointer {
+    position: absolute;
+    left: 22%;
 }
