--- a/src/App.css
+++ b/src/App.css
@@ -40,23 +40,26 @@ body {
     align-items: center;
 }
 
-.Row{
-    width: 90%;
-    height: 16%;
+.Row {
+    width: 92%;
+    height: 12.5%;
     display: flex;
     justify-content: center;
     position: absolute;
-
     border-style: hidden;
+    border-radius: 10px;
+
 
 }
+
 .Box-Container>.Row>.Box {
     background-color: #464343;
     display: inline-block;
-    width:  10vh;
-    height: 8vh;
+    width: 8vh;
+    height: 7.5vh;
     margin-left: 5px;
     margin-right: 5px;
+    margin-top: 3px;
     text-align: center;
     color: white;
     border-radius: 10px;
