--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
 
 
 .Box-Container {
-    background-color: DodgerBlue;
+    background-color: rgb(10, 32, 54);
     height: 65vh;
     width: 55vh;
     position: absolute;
