--- a/src/projects/dnd/style/App.css
+++ b/src/projects/dnd/style/App.css
@@ -12,6 +12,10 @@ body {
     display: flex;
     width: 100%;
     height: 100vh; /* Full viewport height */
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+
 }
 
 .cardContainer {
@@ -33,12 +37,7 @@ body {
     text-align: center;
     margin: 7px;
     cursor: pointer;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    color: #000000;
     background-color: #949e9bac;
-
 }
 
 .name {
@@ -83,61 +82,40 @@ body {
     color: rgb(97, 191, 191);
 }
 
+.options-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    padding: 10px; /* Optional: Add padding around the container */  
+}
+
+.option {
+    margin-right: 10px; /* Adjust the value for spacing between images */
+    height: 3vh; /* Adjust the height as needed */
+    cursor: pointer; /* Optional: Change cursor to pointer to indicate clickable elements */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.timer {
+    position: relative;
+    color: white;
+    height: 3vh; /* Adjust the height as needed */
+    bottom: 2px;
+    font-size: 3vh;
+    cursor: wait; /* Optional: Change cursor to pointer to indicate clickable elements */
+
+}
+
 .refresh-container {
-    position: absolute;
-    bottom: 1%;
-    right: 1%;
-}
-
-.refresh-players {
-    width: 2vw;
-    height: 3vh;
-    cursor: pointer;
-    margin: 5px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    opacity: 1;
-
-}
-
-.refresh-monsters {
-    width: 2vw;
-    height: 3vh;
-    cursor: pointer;
-    margin: 5px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    opacity: .8;
-}
-
-.refresh-all {
-    width: 2vw;
-    height: 3vh;
-    cursor: pointer;
-    margin: 5px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    opacity: .8;
-}
-
-.hide-enemies {
-    position: absolute;
-    bottom: 1.5%;
-    left: 1%;
-    width: 2vw;
-    height: 3vh;
-    cursor: pointer;
-    margin: 5px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    padding: 10px; /* Optional: Add padding around the container */  
 }
 
 .image-container {
@@ -150,10 +128,10 @@ body {
     border-top-left-radius: 55px;
     border-top-right-radius: 55px;
     border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    border-bottom-right-radius: 30px;    
 }
 
-.image {
+.image-container .image {
     position: absolute;
     display: block;
     width: inherit;
@@ -164,11 +142,34 @@ body {
     border-bottom-right-radius: inherit;
 }
 
+.image-container .imageSmoke {
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
+    background: linear-gradient(to top, #0000009c, #00000000);
+}
+
+.avatarEffectsBar {
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    width: 100%;
+    height: 25%; 
+}
+
+.effect:hover + .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
 .overlay-skull {
     background-color: #651d1d;
     opacity: .35; /* Adjust opacity for desired transparency (0.0 to 1.0) */
 }
-
 
 .overlay-blood {
     opacity: .8; /* Adjust opacity for desired transparency (0.0 to 1.0) */
@@ -177,4 +178,64 @@ body {
 .loading {
     color: white;
     font-size: xx-large;
+}
+
+
+.effectsBarContainer {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
+.effectsBarPlayerAvatar {
+    position: absolute;
+    width: 70px;
+    height: 70px; /* Adjust the height as needed */
+    top: -45%;
+    right: 43%;
+    border: 2px solid #ffffff;
+
+}
+
+.effectsBar {
+    display: grid;
+    border: 2px solid #ffffff;
+    width: 500px;
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    gap: 10px;
+    background-color: rgba(0, 0, 0, 0.9); /* Example background color */
+}
+
+.effect {
+    width: 40px; /* Adjust the max width as needed */
+    height: 40px; /* Adjust the max width as needed */
+    top: 50%;
+    margin: 1px;
+    border-radius: 20px;
+    
+}
+
+.tooltiptext {
+    visibility: hidden;
+    background-color: rgb(46, 46, 46);
+    color: white;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 55%; /* Position tooltip above the image */
+    left: 50%;
+    transform: translateX(-50%); /* Center horizontally */
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.effectWrapper {
+    position: relative;
+}
+
+.effectWrapper .tooltiptext {
+    bottom: 110%;
+    width: 100px;
 }
