--- a/src/projects/dnd/style/App.css
+++ b/src/projects/dnd/style/App.css
@@ -304,3 +304,23 @@ body {
     font-weight: bold;
 }
 
+.grid {
+    position: absolute;
+    width: 100%;
+    height: 45%;
+    bottom: 10%;
+    display: grid;
+    grid-template-columns: repeat(3, 20%);
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    z-index: 1;
+    border: 1px solid #000000;
+}
