--- a/src/projects/dnd/style/App.css
+++ b/src/projects/dnd/style/App.css
@@ -2,9 +2,28 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
+
 }
 
 .dndBackground {
+    position: relative;
+    background-color: #000000;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    width: 100%;
+    height: 100vh; 
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    justify-content: center; 
+    align-items: center; 
+}
+
+.videoBackground {
+    border: none; 
+    position: relative;
     background-color: #000000;
     background-size: cover;
     background-repeat: no-repeat;
@@ -19,10 +38,11 @@ body {
 }
 
 .cardContainer {
+    position: absolute;
     justify-content: center; 
     align-items: center;    
-    width: 90%;
-
+    width: 80%;
+    padding: 100%;
 }
 
 .card {
