updated edit encounter name encounter list title, no current encounter handling

--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -79,9 +79,14 @@
     font-weight: bolder;
 }
 
+.encounterTitle {
+    border-bottom: 1px solid #ccc;
+}
+
 .encounterTitleEdit {
     visibility: hidden; 
 }
+
 .encounterTitle:hover + .encounterTitleEdit,
 .encounterTitleEdit:hover {
     visibility: visible; 
