--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -52,9 +52,9 @@
 
 }
 
-.monsterSearchIcon {
+/* .monsterSearchIcon {
     width: 50px;
-}
+} */
 
 .monsterSearchSource {
     font-size: 12px;
@@ -62,11 +62,13 @@
 }
 
 
-.encounterCreaturesList {
+/* .encounterCreaturesList {
+    list-style-type: none; 
     padding: 0px;
     overflow-y: scroll;
     height: 100%;
 }
+*/
 
 .encounterCreaturesNoItemsContainer {
     margin-top: 25%;
@@ -85,14 +87,14 @@
     transition: background-color 0.2s ease;
 }
 
-.encounterCreaturesListItem {
+/* .encounterCreaturesListItem {
+    display: flex;
+    justify-content: column;
     padding: 8px;
     border-bottom: 1px solid #ccc;
-    display: flex;
-    justify-content: space-between;
     color: rgb(0, 0, 0);
     transition: background-color .1s ease;
-}
+} */
 
 .submitButton {
     padding: 0px;
@@ -112,11 +114,11 @@
     transition: opacity .2s ease-in-out;
 }
 
-.encounterCreaturesHp {
+/* .encounterCreaturesHp {
     color: rgb(27, 204, 48);
-}
+} */
 
-.encounterCreatureX {
+/* .encounterCreatureX {
     opacity: 0;
     position: relative;
     right: 0px;
@@ -125,7 +127,7 @@
     color: red;
     cursor: pointer;
     font-weight: bolder;
-}
+} */
 
 .encounterTitleEditInput {
     width: 90%;
@@ -209,7 +211,7 @@ input {
 
 .titleFontFamily {
     font-family: "Spectral SC", serif;
-    margin-bottom: 0px;
+    margin: 0px;
 }
 
 .statBlock {
@@ -401,34 +403,57 @@ input {
 }
 
 .dmViewButtonContainer {
+    position: relative;
     display: flex;
+    width: 100%;
+    flex-direction: row;
+    border-top: 1px solid #822000; /* Change color and thickness */
+    border-bottom: 1px solid #822000; /* Change color and thickness */
+
 }
 
 .dmViewButtonContainer .dropdown {
     all: unset;
     position: relative;
-    display: inline-block;
+    display: flex;
 }
 
 .dropdown {
-    all: unset;
     position: relative;
-    display: inline-block;
+    all: unset;
+    display: flex;
 }
 
 .dmViewButton {
-    padding: 1vh 1.5vw;
+    padding: 1% 1.5%;
     cursor: pointer;
     border: 1px solid #ccc;
     background-color: #f9f9f9;
+}
+
+@keyframes slideDown {
+    0% {
+      transform: translateY(-10%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+
+    }
+}
+
+.animatedMenu {
+    animation: slideDown 0.25s ease-out forwards;
+    /* Initial position for the slide up effect */
+    transform: translateY(-10%);
 }
 
 /* Dropdown menu */
 .dropdown-menu {
     position: absolute;
     top: 100%;
-    left: 0;
-    min-width: 160px;
+    width: 250%;
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -440,10 +465,74 @@ input {
 
 /* Dropdown menu items */
 .dropdown-item {
+    display: flex;
     padding: 10px 20px;
     cursor: pointer;
+    border-bottom: 1px dotted #ccc;
+    justify-content: space-between;
 }
 
 .dropdown-item:hover {
     background-color: #f1f1f1;
+}
+
+
+.encounterDropdownX {
+    opacity: 1;
+    position: relative;
+    right: 0px;
+    background: none;
+    border: none;
+    color: red;
+    cursor: pointer;
+    font-weight: bolder;
+}
+
+.encounterDropdownX:hover {
+    border: 1px dotted #ae2626;
+
+}
+
+.dropdown-item:hover .encounterDropdownX{
+    opacity: 1;
+    transition: opacity .2s ease-in-out;
+}
+
+
+
+
+.encounterCreaturesList {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    overflow-y: scroll;
+    height: 100%;
+}
+  
+.encounterCreaturesListItem {
+    display: flex;
+    align-items: center; /* Vertically center the items */
+    margin-bottom: 1%; /* Add space between list items */
+    padding: 1%; /* Add padding for better visual separation */
+}
+  
+.monsterSearchIcon {
+    margin-right: 10px; /* Space between the image and the name */
+    width: 50px;
+}
+  
+.encounterCreaturesHp {
+    margin-left: auto; /* Pushes this element to the far right */
+    margin-right: 5%; /* Pushes this element to the far right */
+    color: rgb(27, 204, 48);
+}
+  
+.encounterCreatureX {
+    position: relative;
+    padding: 0% 0% 0% 3%;
+    opacity: 0;
+    background: none;
+    border: none;
+    color: red;
+    cursor: pointer;
+    font-weight: bolder;
 }
