--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -14,6 +14,10 @@
     width: 95%;
 }
 
+.columnZindex {
+    z-index: 9999 !important;
+}
+
 .column {
     position: relative;
     width: 24%;
@@ -86,7 +90,7 @@
 }
 
 .encounterCreatureX:hover,
-.encounterCreatureContainer:hover + .encounterCreatureX {
+.listItem:hover .encounterCreatureX {
     opacity: 1;
     transition: opacity .2s ease-in-out;
 }
@@ -104,6 +108,7 @@
     color: #822000;
     font-weight: bold;
     font-family: 'Bitter', serif;
+
 }
 
 @keyframes grow {
@@ -200,7 +205,6 @@ input {
 
 .textShadow {
     text-shadow: -.5px .5px 0px #000000;
-                
 }
 
 .infoContainer {
@@ -343,20 +347,18 @@ input {
 }
 
 .shadowBox {
-    background-color: #fff; /* Background color of the div */
-    border: 1px solid #ddd; /* Optional: border for the div */
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Bottom shadow */
 }
 
 .infoContainerFlag {
     position: absolute;
     transform: rotate(45deg);
-    bottom: calc(100% - 8px);
-    right: 31%;
+    bottom: 35%;
+    right:  calc(100% - 8px);
     background-color: #f5e9af;
     height: 16px;
     width: 16px;
-    border-top: 1px solid #b59c9c;
+    border-bottom: 1px solid #b59c9c;
     border-left: 1px solid #b59c9c;
 }
 
@@ -477,20 +479,16 @@ input {
     transition: opacity .2s ease-in-out;
 }
 
-.encounterCreaturesList {
-    list-style-type: none; /* Remove bullets */
-    padding: 0; /* Remove padding */
-    overflow-y: scroll;
-    height: 100%;
-}
+
 
 .listItem {
-    padding-bottom: 2%;
+    padding-bottom: 1%;
 }
   
 .encounterCreatureContainer {
     display: flex;
     border: 1px solid #ccc;
+    background-color: #e0d9b7;
 }
 
 
@@ -576,31 +574,58 @@ input {
     animation: editHpGrow 0.25s ease-out forwards;
 }
 
-.editStatsContainer {
-    border-radius: 10px;
-    display: flex;
-    border: 1px solid #b59c9c;
-    padding: 10px;
-    margin-bottom: 1%;
-    width: 100%;
-    z-index: 2;
-    background-color: #f5e9af;
-    box-sizing: border-box;
-    justify-content: space-around;
 
+.encounterCreaturesList {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    margin-top: 3%; 
+    margin-bottom: 8%; 
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+    background-color: #f8f2d3;
+
+}
+
+.editStatsContainer {
+    position: fixed;
+    border-radius: 10px;
+    border: 1px solid #b59c9c;
+    background-color: #f5e9af;
+    width: 15%;
+    z-index: 9999;
+}
+
+.hpChanges {
+    padding-top: 1.5%;
+    padding-left: 3%;
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
 
 .editHpContainer {
+    position: relative;
     display: flex;
     flex-direction: column;
-    width: 25%;
-    padding: 2% 10% 0 0;
+    width: 40%;
+    height: 100%;
+    padding: 0 1% 0 0;
 }
 
-.overHpContainer {
+.extraHpContainer {
+    position: relative;
+    display: flex;
+    width: 55%;   
+    top: 6%;
+}
+
+.extraHpInputs {
     display: flex;
     flex-direction: column;
-    width: 25%;   
+    padding-left: 5px;
 }
 
 .hpTitle {
@@ -612,6 +637,8 @@ input {
 }
 
 .editHpButton {
+    height: 30%;
+    width: 100%;
     padding: 0px;
     font-family: 'Bitter', serif;
     color: white;
@@ -643,7 +670,8 @@ input {
 
 .monsterEncounterIconContainer {
     position: relative;
-    width: 35%;
+    height: 50px;
+    width: 100px;
     background-color: #000000;
     margin: 0px 5px 0px 5px;
 }
@@ -686,10 +714,8 @@ input {
  
 .encounterCreatureX {
     position: absolute;
-    margin: 0;
-    padding: 0px;
     top: 0;
-    right: 22%;
+    right: 20%;
     opacity: 0;
     background: none;
     border: none;
