--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -14,10 +14,6 @@
     width: 95%;
 }
 
-.columnZindex {
-    z-index: 9999 !important;
-}
-
 .column {
     position: relative;
     width: 24%;
@@ -350,17 +346,7 @@ input {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Bottom shadow */
 }
 
-.infoContainerFlag {
-    position: absolute;
-    transform: rotate(45deg);
-    bottom: 35%;
-    right:  calc(100% - 8px);
-    background-color: #f5e9af;
-    height: 16px;
-    width: 16px;
-    border-bottom: 1px solid #b59c9c;
-    border-left: 1px solid #b59c9c;
-}
+
 
 
   /* Style the scrollbar track */
@@ -479,8 +465,6 @@ input {
     transition: opacity .2s ease-in-out;
 }
 
-
-
 .listItem {
     padding-bottom: 1%;
 }
@@ -591,41 +575,55 @@ input {
 
 .editStatsContainer {
     position: fixed;
-    border-radius: 10px;
-    border: 1px solid #b59c9c;
-    background-color: #f5e9af;
-    width: 15%;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    background-color: #e0d9b7;
+    box-shadow: 1px 1px 10px #000000;
+    width: 6%;
     z-index: 9999;
+    padding: 5px;
+}
+
+.infoContainerFlag {
+    position: absolute;
+    transform: rotate(45deg);
+    top: 12%;
+    right:  calc(100% - 8px);
+    background-color: inherit;
+    height: 16px;
+    width: 16px;
+    border-bottom: inherit;
+    border-left: inherit;
+
 }
 
 .hpChanges {
-    padding-top: 1.5%;
-    padding-left: 3%;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: baseline
 }
 
 .editHpContainer {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 40%;
-    height: 100%;
-    padding: 0 1% 0 0;
+    align-items: center;
+    width: 100%;
+    height: 50%;
 }
 
 .extraHpContainer {
     position: relative;
     display: flex;
-    width: 55%;   
-    top: 6%;
+    flex-direction: column;
+    width: 100%;   
+    height: 50%;
 }
 
 .extraHpInputs {
-    display: flex;
-    flex-direction: column;
-    padding-left: 5px;
+    height: 100%;
 }
 
 .hpTitle {
@@ -633,15 +631,18 @@ input {
 }
 
 .tempHp {
-    color:rgb(15, 175, 181)
+    color:#0fafb5
 }
 
 .editHpButton {
     height: 30%;
     width: 100%;
     padding: 0px;
+    border-radius: 5px;
     font-family: 'Bitter', serif;
     color: white;
+    border: 1px solid rgb(85, 85, 85);
+    box-shadow: 1px 1px 5px black;
 }
 
 .healButton {
@@ -652,13 +653,33 @@ input {
     background-color: rgb(174, 102, 102);
 }
 
+.editStatsInputExtra,
 .editStatsInput {
-    border-radius: 1px;
-    border: 1px solid #ae2626;
+    border: 0px solid #ae2626;
+    border-radius: 5px;
     width: 100%;
-    margin: 0px;
+    height: 30%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     box-sizing: border-box;
+    font-size: large;
+    padding-left: 18%; 
     text-align: center;
+    text-decoration: underline; 
+    background-color: rgb(255, 255, 255);
+}
+
+.editStatsInputExtra {
+    height: 50%;
+    margin: 0;
+}
+
+#temphp:focus {
+    outline-color: #0fafb5;
+}
+
+#override:focus {
+    outline-color: #7c2204;
 }
 
 .monsterSearchIcon {
