--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -1,7 +1,7 @@
 
 .dmView {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     font-family: 'Bitter', serif;
     height: 100vh;
     background-image: url('../pics/dmViewPaperBack.jpg');
@@ -22,6 +22,10 @@
     border-radius: 10px;
     margin: 10px;
     box-sizing: border-box; /* Include border and padding in the element's total width and height */
+}
+
+.column.expand {
+    width: 45%;
 }
 
 .columnBorder {
@@ -686,7 +690,6 @@ input {
     margin-right: 10px; /* Space between the image and the name */
     width: 50px;
     border-radius: 5px;
-
 }
 
 .monsterEncounterIconContainer {
@@ -744,4 +747,68 @@ input {
     font-weight: bolder;
     cursor: pointer;
 
+}
+
+/* Side menu  */
+
+.side-menu {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 35px; /* Width when closed */
+    height: 100%;
+    background-color: #333;
+    overflow-x: hidden;
+    transition: width 0.3s ease; 
+}
+
+/* Width when the menu is open */
+.side-menu.open {
+    width: 250px;
+}
+
+/* Style for the toggle button */
+.toggle-button {
+    position: relative;
+    background-color: #444;
+    color: white;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Hover effect for the toggle button */
+.toggle-button:hover {
+    background-color: #555;
+}
+
+/* Style for the menu content */
+.menu {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    overflow: hidden;
+    list-style: none;
+    padding: 0px;
+    white-space: nowrap;
+}
+
+.menuItem {
+    cursor: pointer;
+}
+
+.menuIcon {
+    width: 35px;
+}
+
+.clickable-image {
+    width: 150px; /* Adjust the size as needed */
+    height: auto;
+    transition: opacity 0.3s ease;
+}
+
+.menuItem:hover {
+    opacity: 0.8; /* Add a hover effect */
 }
