--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -10,6 +10,25 @@
     background-repeat: no-repeat; /* Prevents the image from repeating */
 }
 
+.firstLoadMenu {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    top: 20%;
+    width: 100%;
+    height: 50%;
+    justify-content: space-around;
+    align-items: center
+}
+
+.firstLoadOptions {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center
+}
+
 .searchBar {
     width: 95%;
 }
@@ -410,11 +429,6 @@ input {
     display: flex;
 }
 
-.dropdown {
-    position: relative;
-    all: unset;
-    display: flex;
-}
 
 .encounterTitleButtonGroup {
     display: flex;
@@ -450,18 +464,27 @@ input {
     transform: translateY(-10%);
 }
 
-/* Dropdown menu */
-.dropdown-menu {
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdownButton {
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdownMenu {
     position: absolute;
     top: 100%;
-    width: 250%;
-    background-color: #fff;
+    left: 0;
+    background-color: white;
     border: 1px solid #ccc;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    list-style-type: none;
-    padding: 0;
+    padding: 10px;
+    list-style: none;
     margin: 0;
+    z-index: 1;
 }
 
 /* Dropdown menu items */
@@ -473,7 +496,7 @@ input {
     justify-content: space-between;
 }
 
-.dropdown-item:hover {
+.dropdownMenu li:hover {
     background-color: #f1f1f1;
 }
 
