--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -443,7 +443,7 @@ input {
 .turnButtons {
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    align-items: center
 }
 
 .turnText {
