--- a/src/projects/dnd/playerView/style/App.css
+++ b/src/projects/dnd/playerView/style/App.css
@@ -191,13 +191,10 @@ hr {
 }
 
 .options-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
     display: flex;
     padding: 10px; 
     background-color: #0000005e;
-
+    align-items: center
 }
 
 .option {
