--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -5,9 +5,38 @@
     font-family: 'Bitter', serif;
     height: 100vh;
     background-image: url('../pics/dmViewPaperBack.jpg');
-    background-size: cover; /* Ensures the image covers the entire container */
-    background-position: center; /* Centers the image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-size: cover;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    /* overflow: hidden;
+    position: relative;
+    background-color: #000000;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    width: 100%;
+    height: 100vh; 
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    justify-content: center; 
+    align-items: center;  */
+}
+
+.dndBackground {
+    overflow: hidden;
+    position: relative;
+    background-color: #000000;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    width: 100%;
+    height: 100vh; 
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    justify-content: center; 
+    align-items: center; 
 }
 
 .firstLoadMenu {
@@ -48,7 +77,6 @@
 }
 
 .columnBorder {
-    background-color: #f8f2d3;
     color: #822000;
 }
 
@@ -64,6 +92,7 @@
 
 .listItem:hover .searchListCreatureContainer {
     background-color: rgb(186, 186, 186);
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.5);
 }
 
 .monsterSearchItem {
@@ -236,7 +265,6 @@ input {
 .statBlock {
     display: flex;
     flex-direction: column;
-    background-color: #f8f2d3;
     border-radius: 10px;
     color: #822000;
     height: 100%
@@ -261,6 +289,9 @@ input {
     height: 100%;
     width: 100%;
     box-sizing: border-box; /* Include border and padding in the element's total width and height */
+    background-color: #f8f2d3d7;
+    border-radius: 8px;
+
 }
 
 .statblockX {
@@ -309,6 +340,8 @@ input {
 .topInfo {
     position: relative;
     height: 100%;
+    background-color: #f8f2d3;
+    border-radius: 8px;
 }
 
 .img {
@@ -321,6 +354,7 @@ input {
     object-position: center; /* Center the image */
     transform: translate(-50%, -50%); /* Offset to center the image */
     opacity: .3;
+    border-radius: 8px;
 }
 
 .source {
@@ -544,12 +578,15 @@ input {
 
 .listItem {
     margin-bottom: 1%;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px #434343;
+
+
 }
   
 .searchListCreatureContainer,
 .encounterCreatureContainer {
     display: flex;
-    border: 1px solid #ccc;
     background-color: #e0d9b7;
 }
 
@@ -668,8 +705,6 @@ input {
     overflow-y: scroll;
     height: 100%;
     width: 100%;
-    background-color: #f8f2d3;
-
 }
 
 .editStatsContainer {
@@ -693,6 +728,7 @@ input {
     width: 16px;
     border-bottom: inherit;
     border-left: inherit;
+    border-radius: 5px;
 
 }
 
