--- a/src/projects/dnd/playerView/style/App.css
+++ b/src/projects/dnd/playerView/style/App.css
@@ -92,7 +92,6 @@ hr {
 
 .dndBackground {
     overflow: hidden;
-
     position: relative;
     background-color: #000000;
     background-size: cover;
@@ -105,11 +104,12 @@ hr {
     font-weight: bold;
     justify-content: center; 
     align-items: center; 
+    z-index: -2;
 }
 
 .videoBackground {
     border: none; 
-    position: relative;
+    position: absolute;
     background-color: #000000;
     background-size: cover;
     background-repeat: no-repeat;
@@ -121,6 +121,7 @@ hr {
     font-weight: bold;
     justify-content: center; 
     align-items: center; 
+    z-index: -2;
 }
 
 .cardContainer {
@@ -203,7 +204,10 @@ hr {
     width: 20px; 
     cursor: pointer; 
     border-radius: 10px;
-    color: white;
+}
+
+.option:hover {
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.5);
 }
 
 .tooltiptext img {
@@ -216,12 +220,10 @@ hr {
 .timer {
     position: relative;
     width: fit-content;
-    height: 25px;
-    font-size: 25px;
+    font-size: 20px;
     bottom: 2px;
-    background-color: #171717b3;
-    border-radius: 2px;
- 
+    left: -5px;
+
 }
 
 .refresh-container {
